--- a/src/components/Home/index.scss
+++ b/src/components/Home/index.scss
@@ -6,6 +6,17 @@
         transform: translateY(-50%);
         width: 40%;
         max-height: 90%;
+        
+        @media screen and (max-width: 768px) {
+            position: relative;
+            left: 0;
+            top: 0;
+            transform: none;
+            width: 100%;
+            max-height: none;
+            padding: 80px 20px 20px;
+            text-align: center;
+        }
     }
 
     h1{
@@ -14,6 +25,15 @@
         margin:0;
         font-family: "Coolvetica";
         font-weight: 400;
+        
+        @media screen and (max-width: 768px) {
+            font-size: 36px;
+            line-height: 1.2;
+        }
+        
+        @media screen and (max-width: 480px) {
+            font-size: 28px;
+        }
         
         &::before{
             content: "<h1>";
@@ -25,6 +45,13 @@
             left: 15px;
             animation: fadeIn 1s 1.7s backwards;
             opacity: 0.6;
+            
+            @media screen and (max-width: 768px) {
+                font-size: 14px;
+                margin-top: -30px;
+                left: 50%;
+                transform: translateX(-50%);
+            }
         }
         &::after{
             content: "</h1>";
@@ -36,18 +63,36 @@
             margin-left: 20px;
             animation: fadeIn 1s 1.7s backwards;
             opacity: 0.6;
+            
+            @media screen and (max-width: 768px) {
+                font-size: 14px;
+                margin-top: 10px;
+                margin-left: 0;
+                left: 50%;
+                transform: translateX(-50%);
+            }
         }
     }
 
-        img{
-            width: 52px;
-            margin-left: 20px;
-            opacity: 0;
-            height: auto;
-            animation: rotateIn 1s linear both;
-            animation-delay: 1.4s;  
+    img{
+        width: 52px;
+        margin-left: 20px;
+        opacity: 0;
+        height: auto;
+        animation: rotateIn 1s linear both;
+        animation-delay: 1.4s;
+        
+        @media screen and (max-width: 768px) {
+            width: 40px;
+            margin-left: 10px;
+        }
+        
+        @media screen and (max-width: 480px) {
+            width: 32px;
+            margin-left: 8px;
         }
     }
+}
 h2{
     color:#8d8d8d;
     margin-top: 20px;
@@ -56,6 +101,17 @@ h2{
     font-family: sans-serif;
     letter-spacing: 3px;
     animation: fadeIn 1s 1.8s backwards;
+    
+    @media screen and (max-width: 768px) {
+        font-size: 18px;
+        letter-spacing: 2px;
+        margin-top: 15px;
+    }
+    
+    @media screen and (max-width: 480px) {
+        font-size: 16px;
+        letter-spacing: 1px;
+    }
 }
 
 .flat-button{
@@ -71,6 +127,16 @@ h2{
     float: left;
     animation: fadeIn 1s 1.8s backwards;
     white-space: nowrap;
+    
+    @media screen and (max-width: 768px) {
+        float: none;
+        display: inline-block;
+        margin-top: 20px;
+        font-size: 12px;
+        letter-spacing: 3px;
+        padding: 12px 20px;
+    }
+    
     &:hover{
         background-color: #ffd700;
         color: #000;
