--- a/src/components/Contact/index.scss
+++ b/src/components/Contact/index.scss
@@ -1,6 +1,11 @@
 .contact-form{
     width: 100%;
     margin-top: 20px;
+    
+    @media screen and (max-width: 768px) {
+        margin-top: 10px;
+    }
+    
     ul{
         padding: 0;
         margin: 0;
@@ -22,9 +27,15 @@
             margin-left: 2%;
             float: left;
             clear: none;
+            
+            @media screen and (max-width: 768px) {
+                width: 100%;
+                margin-left: 0;
+                float: none;
+            }
+            
             &:first-child{
                 margin-left: 0;
-
             }
         }
     }
@@ -38,6 +49,12 @@
         color: #fff;
         padding: 0 20px;
         box-sizing: border-box;
+        
+        @media screen and (max-width: 768px) {
+            height: 45px;
+            font-size: 14px;
+            padding: 0 15px;
+        }
     }
     textarea{
         width: 100%;
@@ -49,7 +66,12 @@
         padding: 20px;
         min-height: 150px;
         box-sizing: border-box;
-
+        
+        @media screen and (max-width: 768px) {
+            font-size: 14px;
+            padding: 15px;
+            min-height: 120px;
+        }
     }
     .flat-button{
         color: #ffd700;
@@ -61,6 +83,15 @@
         border: 1px solid #ffd700;
         float: right;
         border-radius: 4px;
+        
+        @media screen and (max-width: 768px) {
+            float: none;
+            display: block;
+            width: 100%;
+            text-align: center;
+            margin-top: 10px;
+            padding: 12px 15px;
+        }
     }
 }
 
@@ -93,7 +124,13 @@
     float: right;
     width: 53%;
     height: 400px;
-
+    
+    @media screen and (max-width: 768px) {
+        float: none;
+        width: 100%;
+        height: 300px;
+        margin-top: 20px;
+    }
 }
 
 .leaflet-container {
@@ -140,5 +177,11 @@
   
   .info-map {
     display: none;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .map-wrap {
+    height: 300px;
   }
 }
