--- a/src/components/Home/Logo/index.scss
+++ b/src/components/Home/Logo/index.scss
@@ -1,27 +1,55 @@
 .logo-container {
   position: absolute;
-  top: 20%;          // vertical center
-  right: 50%;         // push to right side
+  top: 20%;
+  right: 50%;
   transform: translateY(-50%);
-  width: 250px;      // fixed width
-  height: 250px;     // fixed height to match width
+  width: 250px;
+  height: 250px;
   pointer-events: none;
+  
+  @media screen and (max-width: 768px) {
+    position: relative;
+    top: auto;
+    right: auto;
+    transform: none;
+    width: 150px;
+    height: 150px;
+    margin: 20px auto;
+  }
+  
+  @media screen and (max-width: 480px) {
+    width: 120px;
+    height: 120px;
+    margin: 15px auto;
+  }
 }
 
 .outline-svg{
-  position: absolute; // stack on top of each other
+  position: absolute;
   top: 0;
   left: 0;
   width: 450%;
   height: 350%;
+  
+  @media screen and (max-width: 768px) {
+    width: 100%;
+    height: 100%;
+  }
 }
 
 .outline-svg path {
-    opacity: .7;
+  opacity: .7;
   stroke: #ffd700;
   stroke-width: 4;
   fill: none;
   stroke-linecap: round;
   stroke-linejoin: round;
-          // behind solid logo
+  
+  @media screen and (max-width: 768px) {
+    stroke-width: 3;
+  }
+  
+  @media screen and (max-width: 480px) {
+    stroke-width: 2;
+  }
 }
