--- a/src/components/Layout/index.scss
+++ b/src/components/Layout/index.scss
@@ -16,15 +16,23 @@
     left: 120px;
     font-size: 18px;
     font-family: 'La Bella Aurore';
+    
+    @media screen and (max-width: 768px) {
+        left: 20px;
+        font-size: 14px;
+    }
 }
 
 .bottom-tag-html{
     margin-left: -40px;
+    
+    @media screen and (max-width: 768px) {
+        margin-left: -20px;
+    }
 }
 
 
 .container{
-
     width: 100%;
     will-change: contents;
     height: 90%;
@@ -36,7 +44,16 @@
     z-index:1;
     transform-style: preserve-3d;
     animation: fadeIn 1s forwards;
-    animation-delay:1s ;
+    animation-delay:1s;
+    
+    @media screen and (max-width: 768px) {
+        width: 100%;
+        height: auto;
+        min-height: auto;
+        top: 10%;
+        padding: 0 20px;
+        box-sizing: border-box;
+    }
 }
 
 .about-page,.contact-page{
@@ -50,6 +67,17 @@
         vertical-align: middle;
         display: table-cell;
         max-height: 90%;
+        
+        @media screen and (max-width: 768px) {
+            position: relative;
+            left: 0;
+            top: 0;
+            transform: none;
+            width: 100%;
+            display: block;
+            max-height: none;
+            padding: 20px 0;
+        }
     
     h1{
         font-size: 53px;
@@ -60,6 +88,18 @@
         position:relative ;
         margin-bottom: 40px;
         left: 10px;
+        
+        @media screen and (max-width: 768px) {
+            font-size: 36px;
+            left: 0;
+            margin-bottom: 20px;
+            text-align: center;
+        }
+        
+        @media screen and (max-width: 480px) {
+            font-size: 28px;
+        }
+        
         &::before{
             content: "<h1>";
             font-family: 'La Bella Aurore';
@@ -68,6 +108,11 @@
             margin-top: -10px;
             opacity: 0.6;
             line-height: 18px;
+            
+            @media screen and (max-width: 768px) {
+                font-size: 14px;
+                margin-top: -8px;
+            }
         }
         &::after{
             content: "</h1>";
@@ -79,6 +124,13 @@
             bottom: -20px;
             margin-left: 20px;
             opacity: 0.6;
+            
+            @media screen and (max-width: 768px) {
+                font-size: 14px;
+                left: -20px;
+                bottom: -15px;
+                margin-left: 10px;
+            }
         }
 
     }
@@ -89,6 +141,13 @@
        font-weight: 300;
        min-width: fit-content;
        animation: pulse 1.5s;
+       
+       @media screen and (max-width: 768px) {
+           font-size: 14px;
+           line-height: 1.6;
+           text-align: justify;
+       }
+       
        &:nth-of-type(1){
         animation-delay: 1.1s;
        }
