--- a/src/index.css
+++ b/src/index.css
@@ -1,14 +1,21 @@
 html{
-  font-size: 62.5% ;
-
+  font-size: 62.5%;
 }
+
 body {
   margin: 0;
   font:300 11px/1.4 "Helvetica Neue", 'sans-serif';
   color: #d3bfbf;
-  background:#06364f ;
+  background:#06364f;
   overflow: hidden;
   display: block;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+@media screen and (max-width: 768px) {
+  body {
+    overflow-x: hidden;
+    overflow-y: auto;
+  }
 }
