--- a/src/components/Layout/index.scss
+++ b/src/components/Layout/index.scss
@@ -2,6 +2,11 @@
     width: 100%;
     height: 100%;
     position: absolute;
+    margin-left: 60px; /* Add margin to account for sidebar width */
+    
+    @media screen and (max-width: 768px) {
+        margin-left: 0; /* Remove margin on mobile */
+    }
 }
 .top-tags{
     bottom: auto;
@@ -19,7 +24,6 @@
     
     @media screen and (max-width: 768px) {
         left: 20px;
-        font-size: 14px;
     }
 }
 
@@ -45,15 +49,6 @@
     transform-style: preserve-3d;
     animation: fadeIn 1s forwards;
     animation-delay:1s;
-    
-    @media screen and (max-width: 768px) {
-        width: 100%;
-        height: auto;
-        min-height: auto;
-        top: 10%;
-        padding: 0 20px;
-        box-sizing: border-box;
-    }
 }
 
 .about-page,.contact-page{
@@ -67,17 +62,6 @@
         vertical-align: middle;
         display: table-cell;
         max-height: 90%;
-        
-        @media screen and (max-width: 768px) {
-            position: relative;
-            left: 0;
-            top: 0;
-            transform: none;
-            width: 100%;
-            display: block;
-            max-height: none;
-            padding: 20px 0;
-        }
     
     h1{
         font-size: 53px;
@@ -90,14 +74,7 @@
         left: 10px;
         
         @media screen and (max-width: 768px) {
-            font-size: 36px;
-            left: 0;
-            margin-bottom: 20px;
-            text-align: center;
-        }
-        
-        @media screen and (max-width: 480px) {
-            font-size: 28px;
+            font-size: 40px;
         }
         
         &::before{
@@ -108,11 +85,6 @@
             margin-top: -10px;
             opacity: 0.6;
             line-height: 18px;
-            
-            @media screen and (max-width: 768px) {
-                font-size: 14px;
-                margin-top: -8px;
-            }
         }
         &::after{
             content: "</h1>";
@@ -124,13 +96,6 @@
             bottom: -20px;
             margin-left: 20px;
             opacity: 0.6;
-            
-            @media screen and (max-width: 768px) {
-                font-size: 14px;
-                left: -20px;
-                bottom: -15px;
-                margin-left: 10px;
-            }
         }
 
     }
@@ -141,12 +106,6 @@
        font-weight: 300;
        min-width: fit-content;
        animation: pulse 1.5s;
-       
-       @media screen and (max-width: 768px) {
-           font-size: 14px;
-           line-height: 1.6;
-           text-align: justify;
-       }
        
        &:nth-of-type(1){
         animation-delay: 1.1s;
