--- a/src/components/Sidebar/index.scss
+++ b/src/components/Sidebar/index.scss
@@ -7,15 +7,37 @@
   z-index: 3;
   min-height: 500px;
 
+  @media screen and (max-width: 768px) {
+    width: 100%;
+    height: 60px;
+    position: fixed;
+    bottom: 0;
+    top: auto;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 0 20px;
+    min-height: 60px;
+  }
+
   .logo {
     display: block;
     padding: 8px 0;
+
+    @media screen and (max-width: 768px) {
+      padding: 0;
+    }
 
     img {
       display: block;
       margin: 2px auto;
       width: 44px;
       height: auto;
+
+      @media screen and (max-width: 768px) {
+        width: 36px;
+        margin: 0;
+      }
     }
   }
 
@@ -28,6 +50,14 @@
     margin-top: -105px;
     width: 100%;
 
+    @media screen and (max-width: 768px) {
+      position: static;
+      height: auto;
+      margin: 0;
+      display: flex;
+      gap: 20px;
+    }
+
     a {
       font-size: 22px;
       color: #4d4d4e;
@@ -36,6 +66,16 @@
       height: 51px;
       position: relative;
       text-decoration: none;
+
+      @media screen and (max-width: 768px) {
+        font-size: 20px;
+        line-height: 44px;
+        height: 44px;
+        min-width: 44px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+      }
 
       i {
         transition: all 0.3s ease-out;
@@ -62,6 +102,10 @@
         text-align: center;
         opacity: 0;
         transition: all 0.3s ease-out;
+
+        @media screen and (max-width: 768px) {
+          display: none;
+        }
       }
 
       &:first-child::after {
@@ -94,12 +138,29 @@
     text-align: center;
     margin: 0;
 
+    @media screen and (max-width: 768px) {
+      position: static;
+      display: flex;
+      gap: 15px;
+      margin: 0;
+    }
+
     li{
       a{
         padding:7px 0;
         display: block;
         font-size: 15px;
         line-height: 16px;
+
+        @media screen and (max-width: 768px) {
+          padding: 10px;
+          min-width: 44px;
+          min-height: 44px;
+          display: flex;
+          align-items: center;
+          justify-content: center;
+        }
+
         &:hover svg{
           color: #ffd700;
         }
