--- a/src/components/Home/Logo/index.scss
+++ b/src/components/Home/Logo/index.scss
@@ -8,8 +8,11 @@
   pointer-events: none;
   
   @media screen and (max-width: 768px) {
-    width: 200px;
-    height: 200px;
+    width: 150px;
+    height: 150px;
+    top: 15%;
+    right: 15%;
+    transform: translateY(-50%);
   }
 }
 
@@ -19,6 +22,13 @@
   left: 0;
   width: 450%;
   height: 350%;
+
+  @media screen and (max-width: 768px) {
+    width: 300%;
+    height: 250%;
+    top: -25%;
+    left: -50%;
+  }
 }
 
 .outline-svg path {
